configured webclient for resource server

--- a/spring-security-client/build.gradle
+++ b/spring-security-client/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.6'
 	implementation 'org.slf4j:slf4j-api'
+	implementation 'org.springframework:spring-webflux'
+	implementation 'io.projectreactor.netty:reactor-netty'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
