email functionality added

--- a/spring-security-client/src/main/resources/application.yml
+++ b/spring-security-client/src/main/resources/application.yml
@@ -35,3 +35,14 @@ spring:
         provider:
           spring:
             issuer-uri: http://auth-server:9000
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: mittul.store.liquor@gmail.com
+    password: lyadufzwgkgnfbum
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
