--- a/spring-security-client/build.gradle
+++ b/spring-security-client/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.slf4j:slf4j-api'
 	implementation 'org.springframework:spring-webflux'
 	implementation 'io.projectreactor.netty:reactor-netty'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
