--- a/spring-security-client/build.gradle
+++ b/spring-security-client/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework:spring-webflux'
 	implementation 'io.projectreactor.netty:reactor-netty'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'com.twilio.sdk:twilio:9.1.3'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
