--- a/spring-security-client/build.gradle
+++ b/spring-security-client/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	implementation 'org.slf4j:slf4j-api'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'com.twilio.sdk:twilio:9.1.3'
+	implementation 'javax.xml.bind:jaxb-api'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
